# repo

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: commit-msg-check.yml
src/backend/: main.py
src/frontend/: README.md  package-lock.json  package.json
src/frontend/src/: App.vue  main.ts  style.css
src/frontend/src/views/: HomeView.vue
