[tool.poetry]
name = "repo"
description = ""
authors = ["Name"]
readme = "README.md"

version = "0.1.0"
packages = [{ include = "backend", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
conventional-pre-commit = "^4.4.0"
#python-semantic-release = "^10.4.1"
#ruff = "^0.13.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
